--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <div class="container mx-auto px-4 flex flex-col-reverse lg:flex-row items-center">
       <!-- Text -->
       <div class="w-full lg:w-1/2 mt-10 lg:mt-0">
-        <h1 class="text-4xl lg:text-5xl font-bold mb-6">
-          Moi c\'est Loïc Emmanuel – Chef de projet e-santé &amp; ingénieur DevOps &amp; UX/UI Designer
+        <h1 class="text-3xl lg:text-4xl font-bold mb-6 leading-snug">
+          <span class="block">Moi c\'est Loïc Emmanuel&nbsp;–</span>
+          <span class="block ml-4">Chef de projet e-santé&nbsp;&amp;</span>
+          <span class="block ml-8">ingénieur DevOps &amp; UX/UI Designer</span>
         </h1>
-        <p class="text-lg text-gray-700 mb-8">
+        <p class="text-base text-gray-700 mb-8">
           Passionné par la transformation numérique de la santé, je conçois et pilote des solutions innovantes alliant performance et expérience utilisateur.
         </p>
         <div class="flex space-x-4">
@@ -28,11 +30,17 @@
         </div>
       </div>
       <!-- Shapes -->
-      <div class="w-full lg:w-1/2 flex justify-center">
-        <div class="relative w-64 h-64">
-          <div class="absolute bg-[#88AB75] rounded-full w-40 h-40 -top-4 -left-4"></div>
-          <div class="absolute bg-[#2D93AD] w-32 h-32 rotate-45 right-0 top-10"></div>
-          <div class="absolute bg-[#003844] w-16 h-16 bottom-4 left-20"></div>
+      <div class="w-full lg:w-1/2 flex justify-center lg:justify-end">
+        <div class="grid grid-cols-3 gap-2 max-w-[400px]">
+          <div class="w-full aspect-square bg-[#F56565]"></div>
+          <div class="w-full aspect-square bg-[#ECC94B] rounded-full -translate-x-2"></div>
+          <div class="w-full aspect-square bg-[#2D93AD] rotate-45 translate-y-1"></div>
+          <div class="w-full aspect-square bg-[#003844] rounded-lg -translate-y-1"></div>
+          <div class="w-full aspect-square bg-[#88AB75] scale-110"></div>
+          <div class="w-full aspect-square bg-[#F56565] rounded-full -translate-x-1 translate-y-1"></div>
+          <div class="w-full aspect-square bg-[#2D93AD] -rotate-45 translate-x-1"></div>
+          <div class="w-full aspect-square bg-[#88AB75] -translate-y-1"></div>
+          <div class="w-full aspect-square bg-[#ECC94B] rounded-lg translate-x-1"></div>
         </div>
       </div>
     </div>
